# email-otp-api

./: .env.example  .gitignore  COMPLETION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION.md  INDEX.md  PROJECT_REFERENCE.md  QUICKSTART.md  README.md  SMTP_SETUP.md  START_HERE.md  database.py  email-login-portal.html  email_utils.py  main.py  models.py  pyproject.toml  railway.toml  requirements.txt  test-api.html
tests/: test_api.py
